--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "redux": "^4.0.5",
+    "sfcookies": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
