--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"react-redux": "^7.2.0",
 		"react-scripts": "3.4.1",
 		"react-test-renderer": "^16.13.1",
-		"redux": "^4.0.5"
+		"redux": "^4.0.5",
+		"redux-thunk": "^2.3.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -37,7 +38,9 @@
 	"devDependencies": {
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.2",
+		"fetch-mock": "^9.3.1",
 		"node-sass": "^4.13.1",
+		"redux-mock-store": "^1.5.4",
 		"sass-loader": "^8.0.2"
 	},
 	"jest": {
