--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.2",
 		"fetch-mock": "^9.3.1",
+		"node-fetch": "^2.6.0",
 		"node-sass": "^4.13.1",
 		"redux-mock-store": "^1.5.4",
 		"sass-loader": "^8.0.2"
